--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NPC Zombies</title>
+    <title>NPCZ - Garry's Mod</title>
     
     <!-- Resource hints for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="css/main.css">
     
     <!-- Meta tags for better SEO -->
-    <meta name="description" content="Join the ultimate survival experience where NPCs and players battle in a zombie-infested world.">
-    <meta name="keywords" content="zombie game, survival, multiplayer, NPC zombies">
+    <meta name="description" content="Join the ultimate survival sandbox where players survive against zombies and each other.">
+    <meta name="keywords" content="garry's mod, gmod, source, g-mod, source engine, half-life, hl2, zombie game, survival, multiplayer, zombies, npc zombies vs. players, npcz, npcz.gg">
 </head>
 <body>
     <div class="landing-container">
@@ -31,7 +31,7 @@
                     <img src="assets/images/npcz_logo.png" alt="NPC ZOMBIES VS. PLAYERS" class="main-logo desktop-logo">
                     <img src="assets/images/npcz_logo_mobile.png" alt="NPC ZOMBIES VS. PLAYERS" class="main-logo mobile-logo">
                 </div>
-                <p class="sub-text">Join the ultimate survival experience where NPCs and players battle in a zombie-infested world.</p>
+                <p class="sub-text">The number one Garry's Mod sandbox server. Fight against NPC Zombies, other players, build and raid bases, and so much more.</p>
                 <div class="button-group">
                     <a href="https://play.npcz.gg" class="btn btn-primary">PLAY NOW</a>
                     <a href="https://store.npcz.gg" class="btn btn-secondary btn-store">
