--- a/resources.html
+++ b/resources.html
@@ -19,19 +19,17 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/resources.css">
     <link rel="stylesheet" href="css/zmod-badge.css">
+    <link rel="stylesheet" href="css/components/backButton.css">
     
     <!-- Meta tags for better SEO -->
-    <meta name="description" content="Resources for NPC Zombies - Maps, Rules, Discord, and Server Information">
-    <meta name="keywords" content="zombie game, resources, maps, rules, discord, server IP">
+    <meta name="description" content="Resources for NPCZ - Maps, Rules, Discord, and Server Information">
+    <meta name="keywords" content="npcz, garry's mod, gmod, source engine, half-life, hl2, zombie game, resources, maps, rules, discord, server IP">
 </head>
 <body>
     <div class="resources-container">
         <div class="content-wrapper">
             <div class="header">
-                <a href="index.html" class="back-link">
-                    <i class="fas fa-arrow-left"></i> Back to Home
-                </a>
-                <h1>NPCZ Resources</h1>
+                <h1>Resources</h1>
             </div>
             
             <div class="resources-grid">
@@ -100,5 +98,6 @@
     <!-- JavaScript files -->
     <script src="js/resources.js"></script>
     <script src="js/badge.js"></script>
+    <script src="js/components/backButton.js"></script>
 </body>
 </html>
